--- a/docs/Doxyfile.in
+++ b/docs/Doxyfile.in
@@ -104,7 +104,7 @@ WARN_LOGFILE           =
 # configuration options related to the input files
 #---------------------------------------------------------------------------
 # We do not use *.dox so we can control the order and still have
-# top-level pages:
+# top-level pages (we insert additional filenames here in CMake_doxyfile.cmake):
 INPUT                  = using.dox \
                          options-docs.dox release.dox main.dox \
                          drmf.dox drsyscall.dox
